Update .env.example for job posting API
Changed application name, key, URL, and database settings in .env.example to reflect the local job posting API environment.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="[Local] Job Posting Api"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:q843rhmC2CV15wiSz4WsiL3Mc7/bJ6gnlpjIj4j5p1A=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://job-posting-api.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE="job-posting-api"
 DB_USERNAME=root
 DB_PASSWORD=
 
